// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/GraphNode.vue snapshot has errors 1`] = `
<g
  transform="translate(0, 0)"
>
  <g
    data-node_id=""
    data-type="node-body"
  >
    <path
      d="M0,30 L0,100 A8,8 0 0 0 8,108 L112,108 A8,8 0 0 0 120,100 L120,30"
      fill="#fafafa"
      stroke="red"
      stroke-width="6"
    />
    <path
      d="M0,30 L0,14 A14,14 0 0 1 14,0 L106,0 A14,14 0 0 1 120,14 L120,30"
      fill="#f0e68c"
      stroke="red"
      stroke-width="6"
    />
  </g>
  <g>
    <text
      class="view-only"
      dominant-baseline="text-before-edge"
      fill="#ff0000"
      font-size="16"
      x="8"
      y="6"
    >
      Number
    </text>
  </g>
  <!--v-if-->
  <g>
    
    
  </g>
  <g
    class="view-only"
  >
    
    <g
      transform="translate(8, 60)"
    >
      <foreignobject
        height="40"
        width="100"
      >
        <!-- FIXME: forms are readonly because those in foreignObject do not work well -->
        <div
          class="field"
          xmlns="http://www.w3.org/1999/xhtml"
        >
          <h5>
            value
          </h5>
          <p>
            0
          </p>
        </div>
      </foreignobject>
    </g>
    
  </g>
  <g>
    
    
  </g>
  <g
    transform="translate(0, 108)"
  >
    <g>
      
      <rect
        fill="#fff"
        height="0"
        stroke="red"
        stroke-width="2"
        width="0"
      />
      
      <g
        transform="translate(10, 4)"
      >
        
        <text
          dominant-baseline="text-before-edge"
          fill="red"
          font-size="16"
          font-weight="600"
        >
          
          <tspan
            dy="0"
            x="0"
          >
            aaaaaa
          </tspan>
          <tspan
            dy="1.2em"
            x="0"
          >
            bbbbbbbbbbbbb
          </tspan>
          <tspan
            dy="1.2em"
            x="0"
          >
            ccccc
          </tspan>
          
        </text>
        
      </g>
    </g>
  </g>
</g>
`;

exports[`src/components/elements/GraphNode.vue snapshot initial 1`] = `
<g
  transform="translate(0, 0)"
>
  <g
    data-node_id=""
    data-type="node-body"
  >
    <path
      d="M0,30 L0,98 A8,8 0 0 0 8,106 L132,106 A8,8 0 0 0 140,98 L140,30"
      fill="#fafafa"
      stroke="#555"
      stroke-width="1"
    />
    <path
      d="M0,30 L0,14 A14,14 0 0 1 14,0 L126,0 A14,14 0 0 1 140,14 L140,30"
      fill="#f0e68c"
      stroke="#555"
      stroke-width="1"
    />
  </g>
  <g>
    <text
      class="view-only"
      dominant-baseline="text-before-edge"
      fill="#ff0000"
      font-size="16"
      x="8"
      y="6"
    >
      Make Vector2
    </text>
  </g>
  <!--v-if-->
  <g>
    
    <g
      transform="translate(1, 2)"
    >
      <g
        class="view-only"
      >
        <rect
          fill="transparent"
          height="20"
          stroke="none"
          width="60"
          x="-60"
          y="-10"
        />
        <text
          dominant-baseline="middle"
          fill="#000"
          font-size="14"
          text-anchor="end"
          x="-10"
        >
          label_value
        </text>
      </g>
      <circle
        class="edge-anchor"
        data-edge_key="value"
        data-node_id=""
        data-type="node-edge-output"
        fill="transparent"
        r="10"
        stroke="none"
      />
      <g
        class="view-only"
        fill="#daa520"
        stroke="#333"
      >
        <path
          d="M-6,-8 l6,0 l6,4 l-6,4 l6,4 l-6,4 l-6,0z"
          stroke-linejoin="round"
        />
      </g>
    </g>
    
  </g>
  <g
    class="view-only"
  >
    
    
  </g>
  <g>
    
    <g
      transform="translate(1, 2)"
    >
      <g
        class="view-only"
      >
        <rect
          fill="transparent"
          height="20"
          stroke="none"
          width="60"
          y="-10"
        />
        <g
          transform="translate(10, 0)"
        >
          <g>
            <text
              dominant-baseline="middle"
              fill="#000"
              font-size="14"
            >
              label_x (0)
            </text>
            <!--v-if-->
          </g>
        </g>
      </g>
      <circle
        class="edge-anchor"
        data-edge_key="x"
        data-node_id=""
        data-type="node-edge-input"
        fill="transparent"
        r="10"
        stroke="none"
      />
      <g
        class="view-only"
        fill="#daa520"
        stroke="#333"
      >
        <path
          d="M-8,-8 l12,0 l0,16 l-12,0 l6,-4 l-6,-4 l6,-4z"
          stroke-linejoin="round"
        />
      </g>
    </g>
    
  </g>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphNode.vue snapshot selected 1`] = `
<g
  transform="translate(0, 0)"
>
  <g
    data-node_id=""
    data-type="node-body"
  >
    <path
      d="M0,30 L0,98 A8,8 0 0 0 8,106 L132,106 A8,8 0 0 0 140,98 L140,30"
      fill="#fafafa"
      stroke="orange"
      stroke-width="2"
    />
    <path
      d="M0,30 L0,14 A14,14 0 0 1 14,0 L126,0 A14,14 0 0 1 140,14 L140,30"
      fill="#f0e68c"
      stroke="orange"
      stroke-width="2"
    />
  </g>
  <g>
    <text
      class="view-only"
      dominant-baseline="text-before-edge"
      fill="#ff0000"
      font-size="16"
      x="8"
      y="6"
    >
      Make Vector2
    </text>
  </g>
  <!--v-if-->
  <g>
    
    
  </g>
  <g
    class="view-only"
  >
    
    
  </g>
  <g>
    
    
  </g>
  <!--v-if-->
</g>
`;

exports[`src/components/elements/GraphNode.vue snapshot with data fields 1`] = `
<g
  transform="translate(0, 0)"
>
  <g
    data-node_id=""
    data-type="node-body"
  >
    <path
      d="M0,30 L0,100 A8,8 0 0 0 8,108 L112,108 A8,8 0 0 0 120,100 L120,30"
      fill="#fafafa"
      stroke="orange"
      stroke-width="2"
    />
    <path
      d="M0,30 L0,14 A14,14 0 0 1 14,0 L106,0 A14,14 0 0 1 120,14 L120,30"
      fill="#f0e68c"
      stroke="orange"
      stroke-width="2"
    />
  </g>
  <g>
    <text
      class="view-only"
      dominant-baseline="text-before-edge"
      fill="#ff0000"
      font-size="16"
      x="8"
      y="6"
    >
      Number
    </text>
  </g>
  <!--v-if-->
  <g>
    
    
  </g>
  <g
    class="view-only"
  >
    
    <g
      transform="translate(8, 60)"
    >
      <foreignobject
        height="40"
        width="100"
      >
        <!-- FIXME: forms are readonly because those in foreignObject do not work well -->
        <div
          class="field"
          xmlns="http://www.w3.org/1999/xhtml"
        >
          <h5>
            value
          </h5>
          <p>
            0
          </p>
        </div>
      </foreignobject>
    </g>
    
  </g>
  <g>
    
    
  </g>
  <!--v-if-->
</g>
`;
